--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -23,6 +23,8 @@ a {
 .titre_projet2 p {
     font-size: 12px;
 }
+
+/*Page Accueil*/
 .intro {
     font-size: 18px;
 }
@@ -41,99 +43,107 @@ a {
     font-size: 26px;
 }
 
+
 /*Page Code poursuite*/
 
 /*Paragraphe 1*/
-.leg1 p{
+.partie1 .haut-image2 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-.titre_ben p{
+.partie1 h1{
+    font-weight: normal;
     font-size: 18px;
 }
-.sous-titre1 p {
+.partie1 p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 13px;
     line-height: 25px;
 }
-.inter-titre1 p {
+.partie1 h2 {
     font-family: 'Roboto', serif;
     font-weight: bold;
     font-size: 15px;
     line-height: 25px;
 }
-.texte1 p{
+.partie1 .texte1 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
     font-size: 15px;
 }
-.leg2 p{
+
+/*Partie 2*/
+.partie2 .img3 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-
-/*Paragraphe 2*/
-.texte2 p{
+.partie2 .texte2 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
     font-size: 15px;
 }
-.leg3 p{
+
+/*Partie 3*/
+.partie3 .img4 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-
-/*Paragraphe 3*/
-.inter-titre2 p {
+.partie3 h2 {
     font-family: 'Roboto', serif;
     font-weight: bold;
     font-size: 15px;
     line-height: 25px;
 }
-.texte3 p{
+.partie3>p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
     font-size: 15px;
-}
-.leg4 p{
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    font-size: 9px;
-}
-.leg4_2 p{
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    font-size: 9px;
 }
 
-/*Paragraphe 4*/
-.texte4 p{
+/*Partie 4*/
+.partie4 .leg4 {
+    font-family: 'Roboto', serif;
+    font-weight: normal;
+    font-size: 9px;
+}
+.partie4 .leg4_2 {
+    font-family: 'Roboto', serif;
+    font-weight: normal;
+    font-size: 9px;
+}
+.partie4>p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
     font-size: 15px;
 }
-.leg5 p{
+.partie4 .img6 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
 
 /*Bande annonce*/
-.bande_annonce p {
+.bande_annonce h3 {
+    font-weight: normal;
     font-size: 18px;
 }
 
 /*Galerie*/
-.galerie p {
+.galerie h3 {
+    font-weight: normal;
     font-size: 18px;
+}
+.galerie p{
+    font-family: 'Roboto', serif;
+    font-weight: normal;
 }
 
 /*Bouton cliquable*/
