--- a/css/mescss/article-scientifique.css
+++ b/css/mescss/article-scientifique.css
@@ -40,44 +40,42 @@ body {
     color: white;
 }
 
-/*Image haut*/
-.teletravail img {
+/*Partie 1*/
+.parag1 .teletravail img {
     top: 100px;
     position: absolute;
 }
-
-/*Paragraphe 1*/
-.tt1 p {
+.parag1 h1 {
     position: absolute;
-    top: 524px;
+    top: 532px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl1 p {
+.parag1 p {
     position: absolute;
     top: 600px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.table img {
+.parag1 .table img {
     top: 810px;
     position: absolute;
 }
-.lg1 p {
+.parag1 .lg1 {
     position: absolute;
-    top: 1030px;
+    top: 1035px;
     margin-left: 218px;
     color: white;
 }
 
-/*Paragraphe 2*/
-.artcl2 p {
+/*Partie 2*/
+.parag2 p {
     position: absolute;
     top: 1060px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.violet1 {
+.parag2 .violet1 {
     position: absolute;
     background-color: #6356B5;
     top: 1073px;
@@ -86,7 +84,7 @@ body {
     margin-left: 0;
     opacity: 44%;
 }
-.violet2 {
+.parag2 .violet2 {
     position: absolute;
     background-color: #6356B5;
     top: 1148px;
@@ -95,7 +93,7 @@ body {
     margin-left: 77px;
     opacity: 44%;
 }
-.violet3 {
+.parag2 .violet3 {
     position: absolute;
     background-color: #6356B5;
     top: 1323px;
@@ -104,129 +102,127 @@ body {
     margin-left: 0;
     opacity: 44%;
 }
-.carte img {
+.parag2 .carte img {
     top: 1600px;
     position: absolute;
 }
-.lg2 p {
+.parag2 .lg2 p {
     position: absolute;
-    top: 1830px;
-    margin-left: 233px;
+    top: 1825px;
+    margin-left: 250px;
     color: white;
 }
 
-/*Paragraphe 3*/
-.inter-titre-as1 p {
+/*Partie 3*/
+.parag3 h2 {
     position: absolute;
-    top: 1850px;
+    top: 1860px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl3 p {
+.parag3 p {
     position: absolute;
-    top: 1880px;
+    top: 1885px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.inter-titre-as2 p {
+.parag3 h3 {
     position: absolute;
     top: 2010px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl4 p {
+.parag3 p1 {
     position: absolute;
-    top: 2065px;
+    top: 2080px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.bouchon img {
+.parag3 .bouchon img {
     top: 2255px;
     position: absolute;
 }
-.lg3 p {
+.parag3 .lg3 {
     position: absolute;
-    top: 2500px;
+    top: 2510px;
     margin-left: 152px;
     color: white;
 }
 
-/*Paragraphe 4*/
-.inter-titre-as3 p {
+/*Partie 4*/
+.parag4 h2 {
     position: absolute;
     top: 2530px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl5 p {
+.parag4 p {
     position: absolute;
     top: 2560px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl6 p {
+.parag4 .artcl6 p {
     position: absolute;
     top: 2645px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.billet img {
+.parag4 .billet img {
     top: 2880px;
     position: absolute;
 }
-.lg4 p {
+.parag4 .lg4 {
     position: absolute;
-    top: 3115px;
-    margin-left: 125px;
+    top: 3125px;
+    margin-left: 130px;
     color: white;
 }
 
-/*Paragraphe 5*/
-.inter-titre-as4 p {
+/*Partie 5*/
+.parag5 h2 {
     position: absolute;
     top: 3150px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl7 p {
+.parag5 p {
     position: absolute;
     top: 3205px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.inter-titre-as5 p {
+.parag5 .inter-titre-as5 h2 {
     position: absolute;
     top: 3360px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.artcl8 p {
+.parag5 .inter-titre-as5 p {
     position: absolute;
     top: 3415px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.nom-auteur p {
+.parag5 .nom-auteur h2 {
     position: absolute;
     top: 3500px;
     margin-left: 20px;
     margin-right: 20px;
 }
-
-/* Dernière image */
-.ademe img {
+.parag5 .ademe img {
     top: 3550px;
     position: absolute;
     margin-left: 59px;
 }
-.lg5 p {
+.parag5 .lg5 {
     position: absolute;
-    top: 3770px;
+    top: 3775px;
     margin-left: 63px;
 }
-.lg5-2 p {
+.parag5 .lg5-2 {
     position: absolute;
-    top: 3783px;
+    top: 3788px;
     margin-left: 255px;
 }
 
@@ -242,33 +238,22 @@ body {
 
 
 /*Bouton cliquable*/
-.bouton img {
+.boubou {
+    background-color: #010326;
     position: absolute;
-    top: 3800px;
+    height: 72px;
+    width: 296px;
+    border-radius: 50px;
+    top: 3900px;
     margin-left: 40px;
 }
-.tex-clic-as1 p {
-    position: absolute;
-    top: 3903px;
+.boubou .tex-clic-as1 p {
+    position: relative;
     color: white;
     text-decoration: underline;
-    margin-left: 133px;
+    margin-left: 90px;
 }
 
-
-/*Bouton cliquable*/
-.bouton img {
-    position: absolute;
-    top: 3900px;
-    margin-left: 48px;
-}
-.tex-clic-as1 p {
-    position: absolute;
-    top: 3902px;
-    color: white;
-    text-decoration: underline;
-    margin-left: 144px;
-}
 
 /*Footer*/
 .fond_footer {
