--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -11,6 +11,7 @@ body {
 }
 
 a {
+    font-size: 20px;
     font-family: 'Habibi', serif;
     font-weight: normal;
     text-decoration: none;
@@ -68,7 +69,7 @@ a {
     font-size: 15px;
     line-height: 25px;
 }
-.partie1 .texte1 p{
+.partie1 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -80,12 +81,6 @@ a {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
-}
-.partie2 .texte2 p{
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    line-height: 25px;
-    font-size: 15px;
 }
 
 /*Partie 3*/
@@ -172,13 +167,13 @@ a {
     font-size: 13px;
     line-height: 25px;
 }
-.part1 .inter-titre2_1 p {
+h2 {
     font-family: 'Roboto', serif;
     font-weight: bold;
     font-size: 15px;
     line-height: 25px;
 }
-.part1 .art-1 p{
+.part1>p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -186,18 +181,18 @@ a {
 }
 
 /*Paragraphe 2*/
-.part2 .legd1 p{
+.part2 .data-center p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-.part2 .art-2 {
+.part2>p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
     font-size: 15px;
 }
-.part2 .legd2 p{
+.part2 .ordi_vue p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -216,7 +211,7 @@ a {
 
 /*Partie 3*/
 
-.part3 .legd4 {
+.part3 .inter p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -227,7 +222,7 @@ a {
     font-size: 15px;
     line-height: 25px;
 }
-.part3 .art-4 {
+.part3 p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -235,7 +230,7 @@ a {
 }
 
 /*Paragraphe 4*/
-.part4 .legd5 {
+.part4 .jeunes p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -246,14 +241,14 @@ a {
     line-height: 25px;
     font-size: 15px;
 }
-.part4 .legd6 {
+.part4 .phone p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
 
 /*Interview*/
-.part5 .t-inter {
+.part5 p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -292,19 +287,7 @@ a {
     font-size: 15px;
     line-height: 25px;
 }
-.par1 .parg1 {
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    line-height: 25px;
-    font-size: 15px;
-}
-.par1 .parg2 {
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    line-height: 25px;
-    font-size: 15px;
-}
-.par1 .parg3 {
+.par1 p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -312,12 +295,12 @@ a {
 }
 
 /*Partie 2*/
-.par2 .lgd1 {
+.par2 .mac p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-.par2 .parg4 p{
+.par2 p{
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -325,7 +308,7 @@ a {
 }
 
 /*Partie 3*/
-.par3 .lgd2 {
+.par3 .quest p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -336,13 +319,7 @@ a {
     font-size: 15px;
     line-height: 25px;
 }
-.par3 .petit-titr {
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    line-height: 25px;
-    font-size: 15px;
-}
-.par3 .list ul li {
+.par3 p, ul li {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -355,13 +332,7 @@ a {
     font-weight: normal;
     font-size: 9px;
 }
-.par4 .list2 ul li {
-    font-family: 'Roboto', serif;
-    font-weight: normal;
-    line-height: 25px;
-    font-size: 15px;
-}
-.par4>p{
+.par4>p, ul li {
     font-family: 'Roboto', serif;
     font-weight: normal;
     line-height: 25px;
@@ -369,7 +340,7 @@ a {
 }
 
 /*Partie 5*/
-.par5 .lgd4 {
+.par5 .firefox p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -386,7 +357,7 @@ a {
     line-height: 25px;
     font-size: 15px;
 }
-.par5 .lgd5 {
+.par5 .ecosia p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
@@ -562,14 +533,14 @@ a {
 /*À propos*/
 
 /*Haut*/
-.present p {
+.debut p {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 15px;
 }
-
-/*Deuxième partie*/
-.contact-moi p {
+.debut h1 {
+    font-family: 'Habibi', serif;
+    font-weight: normal;
     font-size: 40px;
 }
 
@@ -577,11 +548,6 @@ a {
 * {
     font-family: 'Roboto', serif;
 }
-
-
-
-
-
 
 
 /*Footer*/
